<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
            android:id="@+id/fadedBackgroundSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#222"
            android:alpha="0.0"
            tools:alpha="0.7"/>

    <View
            android:id="@+id/settingsProfileImageSpacing"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/settingsCardView"/>

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settingsProfileImage"
            android:layout_width="96dp"
            android:layout_height="96dp"
            app:civ_border_width="2dp"
            android:elevation="8dp"
            app:civ_border_color="#FFFFFFFF"
            android:src="@drawable/swp_logo_small"
            android:layout_marginTop="-48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/settingsProfileImageSpacing"
            app:layout_constraintVertical_bias="0.0"/>

    <androidx.cardview.widget.CardView
            android:id="@+id/settingsCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F0F0F0"
                android:padding="16dp">

            <TextView
                    android:id="@+id/settingsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/settings_title"
                    android:textColor="#222"
                    android:gravity="center"
                    android:paddingTop="24dp"
                    android:paddingBottom="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                    android:id="@+id/logoutText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/logout_text"
                    android:textColor="#222"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/settingsTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            <Button
                    android:id="@+id/logoutButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/logout"
                    android:textColor="#222"
                    app:layout_constraintTop_toBottomOf="@id/logoutText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    android:id="@+id/distanceSelectionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/units_of_measurement"
                    android:textColor="#222"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/logoutButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            <Button
                    android:id="@+id/measurementMile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:textSize="12sp"
                    android:text="@string/miles"
                    android:textColor="#FFF"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/distanceSelectionText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/measurementKilometer" />

            <Button
                    android:id="@+id/measurementKilometer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:textSize="12sp"
                    android:text="@string/kilometers"
                    android:textColor="#222"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/distanceSelectionText"
                    app:layout_constraintStart_toEndOf="@id/measurementMile"
                    app:layout_constraintEnd_toEndOf="parent" />

            <Button
                    android:id="@+id/dismissSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/settings_save"
                    android:layout_marginTop="16dp"
                    android:textColor="#222"
                    app:layout_constraintTop_toBottomOf="@id/measurementMile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>