<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/day_row_cl"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="4dp"
        xmlns:tools="http://schemas.android.com/tools">

    <!-- Day Title -->
    <TextView
            android:id="@+id/day_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

    <!-- Goal -->
    <TextView
            android:id="@+id/goal_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:text="@string/goal"
            android:layout_marginStart="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/goal_input"
            app:layout_constraintTop_toBottomOf="@id/day_title"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"/>

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/goal_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="56sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAlignment="center"
            app:backgroundTint="@color/colorPrimary"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textColorHighlight="@color/colorPrimaryHighlight"
            android:textSelectHandle="@drawable/handle"
            android:textSelectHandleLeft="@drawable/handle"
            android:textSelectHandleRight="@drawable/handle"
            android:inputType="numberDecimal"
            android:text="@string/_0"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/actual_mileage"
            app:layout_constraintTop_toTopOf="@id/goal_title"
            app:layout_constraintVertical_bias="0.0" />

    <!-- Actual -->
    <TextView
            android:id="@+id/actual_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:text="@string/actual"
            android:layout_marginEnd="4dp"
            app:layout_constraintLeft_toLeftOf="@id/actual_mileage"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/day_title"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"/>

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/actual_mileage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="56sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/_0"
            app:backgroundTint="@color/colorPrimary"
            android:enabled="false"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/goal_input"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/actual_title"
            app:layout_constraintVertical_bias="0.0"/>

    <!-- Quick Stats -->

    <TextView
            android:id="@+id/stat_box_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/grey"
            android:textStyle="italic"
            android:textAlignment="center"
            android:text="@string/default_time_stat"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goal_input"
            app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            android:id="@+id/stat_box_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/grey"
            android:textStyle="italic"
            android:textAlignment="center"
            android:text="@string/default_climb_stat"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/stat_box_one"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goal_input"
            app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            android:id="@+id/stat_box_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/grey"
            android:textStyle="italic"
            android:textAlignment="center"
            android:text="@string/view"
            android:visibility="gone"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/stat_box_two"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goal_input"
            app:layout_constraintHorizontal_bias="0.0"
            tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>